Preparar deploy a GH Pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cv-react-mui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://johanalarcon.github.io/cv",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
@@ -24,7 +25,9 @@
     "build": "react-scripts build",
     "dev": "npm run start",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
